force-app/main/default/objects/Channel__c/Channel__c.object-meta.xml
<CustomObject>
    <label>Channel</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Channel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>