force-app/main/default/objects/Channel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Additional ECN, Affiliate, Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel providers</relationshipLabel>
    <relationshipName>Account_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>