force-app/main/default/objects/Channel__c/fields/Channel_Account__c.field-meta.xml
<CustomField>
    <fullName>Channel_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Channel Agreement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Accounts</relationshipLabel>
    <relationshipName>Channel</relationshipName>
    <type>Lookup</type>
</CustomField>