force-app/main/default/objects/Channel__c/fields/Channel_Country__c.field-meta.xml
<CustomField>
    <fullName>Channel_Country__c</fullName>
    <formula>TEXT(Channel_Account__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Country</label>
    <type>Text</type>
</CustomField>