force-app/main/default/objects/Channel__c/fields/Channel_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Legal_Name__c</fullName>
    <formula>Channel_Account__r.Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Legal Name</label>
    <type>Text</type>
</CustomField>