force-app/main/default/objects/Channel__c/fields/Channel_Region__c.field-meta.xml
<CustomField>
    <fullName>Channel_Region__c</fullName>
    <formula>TEXT(Channel_Account__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Region</label>
    <type>Text</type>
</CustomField>