force-app/main/default/objects/Channel__c/fields/Channel_Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Channel_Trading_As__c</fullName>
    <formula>Channel_Account__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Trading As</label>
    <type>Text</type>
</CustomField>