force-app/main/default/objects/Channel__c/fields/Client_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Type__c</fullName>
    <formula>TEXT(Account__r.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Account Type</label>
    <type>Text</type>
</CustomField>