force-app/main/default/objects/Channel__c/fields/Client_Country__c.field-meta.xml
<CustomField>
    <fullName>Client_Country__c</fullName>
    <formula>TEXT(Account__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Country</label>
    <type>Text</type>
</CustomField>