force-app/main/default/objects/Channel__c/fields/Client_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Legal_Name__c</fullName>
    <formula>Account__r.Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Legal Name</label>
    <type>Text</type>
</CustomField>