force-app/main/default/objects/Channel__c/fields/Client_Region__c.field-meta.xml
<CustomField>
    <fullName>Client_Region__c</fullName>
    <formula>TEXT(Account__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Region</label>
    <type>Text</type>
</CustomField>