force-app/main/default/objects/Channel__c/fields/Client_Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Client_Trading_As__c</fullName>
    <formula>Account__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Trading As</label>
    <type>Text</type>
</CustomField>