force-app/main/default/objects/Channel__c/fields/Lead_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_Type__c</fullName>
    <formula>TEXT(Lead__r.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Account Type</label>
    <type>Text</type>
</CustomField>