force-app/main/default/objects/Channel__c/fields/Lead_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_Country__c</fullName>
    <formula>TEXT(Lead__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Country</label>
    <type>Text</type>
</CustomField>