force-app/main/default/objects/Channel__c/fields/Lead_Region__c.field-meta.xml
<CustomField>
    <fullName>Lead_Region__c</fullName>
    <formula>TEXT(Lead__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Region</label>
    <type>Text</type>
</CustomField>