force-app/main/default/objects/Channel__c/fields/Lead_Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Lead_Trading_As__c</fullName>
    <formula>Lead__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Trading As</label>
    <type>Text</type>
</CustomField>